BMesh poke operator does not work #60643

Closed
opened 2019-01-19 08:16:35 +01:00 by Mikhail Rachinskiy · 6 comments

System Information
Windows 10 x64
Renderer: GeForce GTX 860M/PCIe/SSE2

Blender Version
Broken: 2.80 c59370bf643f
Works: 2.79

Short description of error
bmesh.ops.poke() does not collapse given face.

Exact steps for others to reproduce the error

  • Open attached blend file: poke280.blend
  • Run script from text editor.
  • Nothing happens.
  • Do the same in 2.79 with similar blend file: poke279.blend

Selected face collapses as it should.

**System Information** Windows 10 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 **Blender Version** Broken: 2.80 c59370bf643f Works: 2.79 **Short description of error** `bmesh.ops.poke()` does not collapse given face. **Exact steps for others to reproduce the error** - Open attached blend file: [poke280.blend](https://archive.blender.org/developer/F6334146/poke280.blend) - Run script from text editor. - Nothing happens. - Do the same in 2.79 with similar blend file: [poke279.blend](https://archive.blender.org/developer/F6334152/poke279.blend) # Selected face collapses as it should.
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

Added subscribers: @ideasman42, @WilliamReynish

Added subscribers: @ideasman42, @WilliamReynish

The Python API has changed between 2.7x and 2.8.

Running bpy.ops.mesh.poke() in the Python console works in 2.8.

@ideasman42 I would set this report as Invalid, but will let you judge if that is correct or not.

The Python API has changed between 2.7x and 2.8. Running bpy.ops.mesh.poke() in the Python console works in 2.8. @ideasman42 I would set this report as Invalid, but will let you judge if that is correct or not.
Author
Member

Running bpy.ops.mesh.poke() in the Python console works in 2.8.

Hi William, this report is not about mesh operator, it is about bmesh operator. Hence bmesh.ops not bpy.ops.

> Running bpy.ops.mesh.poke() in the Python console works in 2.8. Hi William, this report is not about mesh operator, it is about bmesh operator. Hence `bmesh.ops` not `bpy.ops`.
Campbell Barton self-assigned this 2019-01-20 00:30:13 +01:00

This issue was referenced by blender/blender@a93cbb70cd

This issue was referenced by blender/blender@a93cbb70cd6ac32193ca3b656c47f620ef10a4d2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#60643
No description provided.