source/blender/python/bmesh/bmesh_py_ops_call.c
@@ -173,7 +173,7 @@ static int bpy_slot_from_py(
 		{
 			if (slot->slot_subtype.intg == BMO_OP_SLOT_SUBTYPE_INT_ENUM) {
 				int enum_val = -1;
-				PyC_FlagSet *items = (PyC_FlagSet *)slot->data.enum_flags;
+				PyC_FlagSet *items = (PyC_FlagSet *)slot->data.enum_data.flags;
 				const char *enum_str = _PyUnicode_AsString(value);
 
 				if (enum_str == NULL) {
@@ -191,7 +191,7 @@ static int bpy_slot_from_py(
 			}
 			else if (slot->slot_subtype.intg == BMO_OP_SLOT_SUBTYPE_INT_FLAG) {
 				int flag = 0;
-				PyC_FlagSet *items = (PyC_FlagSet *)slot->data.enum_flags;
+				PyC_FlagSet *items = (PyC_FlagSet *)slot->data.enum_data.flags;
 
 				if (PyC_FlagSet_ToBitfield(items, value, &flag, slot_name) == -1) {
 					return -1;
